* Fri Feb 08 2008 Jesse Keating <jkeating@redhat.com>
- Fix comps mashup to be more lenient with the open/close of <comps

* Mon Jan 21 2008 Jesse Keating <jkeating@redhat.com>
- Use createrepo api instead of execing it from the cli
- Create different repodata for the unified media, as anaconda no longer
  deals with "ALL" or "1,2,3,4" correctly.  Simplify anaconda by just
  using normal metadata.  Re-factor some things to handle this right.

* Mon Dec 17 Jesse Keating <jkeating@redhat.com>
- Always add the core comps group.

* Mon Dec 10 Jesse Keating <jkeating@redhat.com>
- Use a repoview cache.
- Change path to isomd5sum

* Sat Dec 08 Jesse Keating <jkeating@redhat.com>
- Use a createrepo cache.

* Tue Dec 04 Jesse Keating <jkeating@redhat.com>
- Make logged output reusable in shell
- Default to 670 for a CD size, so that we don't overflow
- More fixes around re-using an existing tree

* Mon Dec 03 Jesse Keating <jkeating@redhat.com>
- Enable repo includes/excludes.
- Disable TMPDIR usage, still broken.
- Put a constraint on flavor values
- Check for selinux enforcing and warn.

* Sun Dec 02 Jesse Keating <jkeating@redhat.com>
- Add a --force option to reuse an existing destdir
- Only overwrite dirs if --force is offered, clean out some specific dirs

* Fri Nov 30 2007 Jesse Keating <jkeating@redhat.com>
- Only check for root if you're doing root level tasks (buildinstall)

* Thu Nov 29 2007 Jesse Keating <jkeating@redhat.com>
- Add a split option to the doCreateIsos call

* Wed Nov 28 2007 Jesse Keating <jkeating@redhat.com>
- Figure out number of isos on the fly, based on tree size
- Add command line option to disable creation of split media
- Remove -S -P options, as splittree and packageorder are now
called from createIsos, if needed.

* Tue Nov 27 2007 Jesse Keating <jkeating@redhat.com>
- Enable TMPDIR again so that anconda-runtime working files
go to the working dir.
- Use downloadPkgs() from yum instead of a homebrew download function.